k8s/Project/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-project-ingress
  labels:
    name: project-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: home-app-service
      port:
        number: 80
  rules:
    - host: karad.cloud
      http:
        paths:
          - path: /laptop
            pathType: Prefix
            backend:
              service:
                name: laptop-app-service
                port:
                  number: 80
          - path: /mobile
            pathType: Prefix
            backend:
              service:
                name: mobile-app-service
                port:
                  number: 80
